misc/block-orders-to-products.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "rule1"
spec:
  description: "L7 policy to restrict access to HTTP call"
  endpointSelector:
    matchLabels:
      app: product
  ingress:
    - fromEndpoints:
      - matchLabels:
          app: order
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - method: GET
                path: /products
